--- a/DocLink/appsettings.json
+++ b/DocLink/appsettings.json
@@ -6,14 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DocLink": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
-  }
+  "AllowedHosts": "*"
 }
-
-
-
-
-
-
