--- a/DocLink/package.json
+++ b/DocLink/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "daisyui": "^4.12.10",
+    "daisyui": "^4.12.13",
+    "eslint": "^9.12.0",
     "tailwindcss": "^3.4.11"
   }
 }
