--- a/DocLink/DocLink.csproj
+++ b/DocLink/DocLink.csproj
@@ -5,6 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Content Remove="Views\Patient\Dashboard.cshtml" />
+      <Content Remove="Views\Patient\ScheduleAppointments.cshtml" />
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
         <PrivateAssets>all</PrivateAssets>
@@ -23,5 +28,17 @@
     <Target Name="Tailwind" BeforeTargets="Build">
         <Exec Command="npm run css:build" />
     </Target>
+    
+    <ItemGroup>
+      <UpToDateCheckInput Remove="Views\Patient\Dashboard.cshtml" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Patient\Dashboard.cshtml" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <None Include="Views\Shared\Dashboard.cshtml" />
+    </ItemGroup>
 
 </Project>
