doctor form working

--- a/DocLink/appsettings.json
+++ b/DocLink/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DocLink": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=model;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DocLink": "Server=localhost;Database=mvcdotnet;User ID=root;Password=;"
   }
 }
 
