--- a/DocLink/DocLink.csproj
+++ b/DocLink/DocLink.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <Content Remove="Views\Patient\Dashboard.cshtml" />
+      <Content Remove="Views\Patient\Index.cshtml" />
       <Content Remove="Views\Patient\ScheduleAppointments.cshtml" />
     </ItemGroup>
 
