--- a/DocLink/appsettings.json
+++ b/DocLink/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DocLink": "Server=localhost;Database=docklink;User ID=root;Password=;"
+    "DocLink": "Server=localhost;Database=mvcdotnet;User ID=root;Password=;"
   }
 }
 
